Etapa 02 concluida - criação da seção 2 com posicionamento de img, textos e estilização de elementos/atualizado deploy

--- a/index.html
+++ b/index.html
@@ -43,7 +43,37 @@
         <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
         <button type="button">Get Started</button>
 
-    </section>       
+    </section>
+      
+    <section class="intro-01">
+
+        <div class="container-00">
+            <div class="container-01">
+                <img src="./img/icon-access-anywhere.svg" alt="access">
+                <h2>Access your files, anywhere</h2>
+                <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
+            </div>
+            <div class="container-01">
+                <img src="./img/icon-security.svg" alt="security">
+                <h2>Security you can trust</h2>
+                <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
+            </div>
+        </div>
+
+        <div class="container-00">
+            <div class="container-01">
+                <img src="./img/icon-collaboration.svg" alt="collaboration">
+                <h2>Real-time collaboration</h2>
+                <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+            </div>
+            <div class="container-01">
+                <img src="./img/icon-any-file.svg" alt="file">
+                <h2>Store any type of file</h2>
+                <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+            </div>
+        </div>
+
+    </section>
 
     <footer>
         <img src="./img/logo.svg" alt="Logo" class="logo-img">
