--- a/index.html
+++ b/index.html
@@ -69,8 +69,42 @@
             <div class="container-01">
                 <img src="./img/icon-any-file.svg" alt="file">
                 <h2>Store any type of file</h2>
-                <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+                <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>                
             </div>
+        </div>
+
+    </section>
+
+    <section class="intro-02">
+
+        <div class="container-01">
+            <img src="./img/illustration-stay-productive.png" alt="productive">
+        </div>
+        <div class="container-01">
+            <h1>Stay productive, wherever you are</h1>
+            <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+            <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+            <a href="#">See how Fylo works</a>
+        </div>      
+
+    </section>
+
+    <section class="intro-03">
+
+        <div class="container-02">
+            <p> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+            <p>Satish Patel</p>
+            <p>Founder & CEO, Huddle</p>
+        </div>
+        <div class="container-02">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+            <p>Bruce McKenzie</p>
+            <p>Founder & CEO, Huddle</p>
+        </div>
+        <div class="container-02">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+            <p> Iva Boyd</p>
+            <p>Founder & CEO, Huddle</p>
         </div>
 
     </section>
