--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
 
     </section>
 
+    <section class="intro-04">
+
+        <div class="container-04">
+            <h1> Get early access today</h1>
+            <p> It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            <div class="container-05">
+                <input type="email" placeholder="email@example.com">
+                <button type="submit">Get Started For Free</button>
+            </div>
+        </div>
+
+    </section>
+
     <footer>
         <img src="./img/logo.svg" alt="Logo" class="logo-img">
     </footer>
