Etapa 05 cocnluida - Finalizada landing page em modo descktop / modo responsivo não iniciado

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/footer.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet"> 
 
-    <title>Page</title>
+    <title>Landing Page Fylo</title>
 </head>
 
 <body>
@@ -90,21 +91,40 @@
     </section>
 
     <section class="intro-03">
+        <div class="quotes">
+            <img src="./img/bg-quotes.png" alt="bg-quotes">
+        </div>
+        
 
         <div class="container-02">
             <p> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <p>Satish Patel</p>
-            <p>Founder & CEO, Huddle</p>
+            <div class="min-container">
+                <img src="./img/profile-1.jpg" alt="img01">
+                <div class="text">
+                    <p><b>Satish Patel</b></p>
+                    <blockquote>Founder & CEO, Huddle</blockquote>
+                </div>               
+            </div>            
         </div>
         <div class="container-02">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <p>Bruce McKenzie</p>
-            <p>Founder & CEO, Huddle</p>
+            <div class="min-container">
+                <img src="./img/profile-2.jpg" alt="img02">
+                <div class="text">
+                    <p><b>Bruce McKenzie</b></p>
+                    <blockquote>Founder & CEO, Huddle</blockquote>
+                </div>
+            </div>           
         </div>
         <div class="container-02">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <p> Iva Boyd</p>
-            <p>Founder & CEO, Huddle</p>
+            <div class="min-container">
+                <img src="./img/profile-3.jpg" alt="img03">
+                <div class="text">
+                    <p><b>Iva Boyd</b></p>
+                    <blockquote>Founder & CEO, Huddle</blockquote>
+                </div>
+            </div>                       
         </div>
 
     </section>
@@ -124,6 +144,49 @@
 
     <footer>
         <img src="./img/logo.svg" alt="Logo" class="logo-img">
+        <div class="container-06">
+            <div class="min-container-01">
+                <img src="./img/icon-location.svg" alt="location">
+                <div class="text-01">
+                    <p>Lorem ipsum dolor sit amet dolorem consectetur adipisicing elit. Et, minima  voluptatibus ducimus iste culpa.
+                    </p>
+                </div>
+            </div>
+            <div class="min-container-02">
+                <div class="box-img">
+                    <img src="./img/icon-phone.svg" alt="location">
+                    <img src="./img/icon-email.svg" alt="location">
+                </div>               
+                <div class="text-02">
+                    <p>+1-543-123-4567</p>
+                    <p>example@fylo.com</p>
+                </div>
+            </div>
+            <div class="min-container-02">
+                <nav class="nav-list-01">
+                    <ul class="list">
+                        <li><a href="#about" title="about"></a>About Us</li>
+                        <li><a href="#Jobs" title="jobs"></a>Jobs</li>
+                        <li><a href="#Press" title="press"></a>Press</li>
+                        <li><a href="#Blog" title="blog"></a>Blog</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="min-container-02">
+                <nav class="nav-list-01">
+                    <ul class="list">
+                        <li><a href="#contact" title="contact"></a>Contact Us</li>
+                        <li><a href="#Terms" title="terms"></a>Terms</li>
+                        <li><a href="#Privacy" title="privacy"></a>Privacy</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="icones">
+                <img src="./img/facebook-2429746.svg" alt="facebook">
+                <img src="./img/twitter-2430933.svg" alt="twitter">
+                <img src="./img/instagram-6338401.svg" alt="">
+            </div>
+        </div>
     </footer>
 
 </body>
