Etapa 06  concluida - Atualização layout responsivo e organização das pastas do projeto

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +26,7 @@
     <header>
         
         <div class="logo">
-            <img src="./img/logo.svg" alt="Logo" class="logo-img">
+            <img src="./assets/img/logo.svg" alt="Logo" class="logo-img">
         </div>
         <div class="lista-nav">
             <ul class="nav-list">
@@ -39,7 +40,7 @@
 
     <section class="intro">
 
-        <img src="./img/illustration-intro.png" alt="Intro">
+        <img src="./assets/img/illustration-intro.png" alt="Intro">
         <h1>All your files in one secure location, accessible anywhere.</h1>
         <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
         <button type="button">Get Started</button>
@@ -50,12 +51,12 @@
 
         <div class="container-00">
             <div class="container-01">
-                <img src="./img/icon-access-anywhere.svg" alt="access">
+                <img src="./assets/img/icon-access-anywhere.svg" alt="access">
                 <h2>Access your files, anywhere</h2>
                 <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
             </div>
             <div class="container-01">
-                <img src="./img/icon-security.svg" alt="security">
+                <img src="./assets/img/icon-security.svg" alt="security">
                 <h2>Security you can trust</h2>
                 <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
             </div>
@@ -63,12 +64,12 @@
 
         <div class="container-00">
             <div class="container-01">
-                <img src="./img/icon-collaboration.svg" alt="collaboration">
+                <img src="./assets/img/icon-collaboration.svg" alt="collaboration">
                 <h2>Real-time collaboration</h2>
                 <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
             </div>
             <div class="container-01">
-                <img src="./img/icon-any-file.svg" alt="file">
+                <img src="./assets/img/icon-any-file.svg" alt="file">
                 <h2>Store any type of file</h2>
                 <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>                
             </div>
@@ -79,7 +80,7 @@
     <section class="intro-02">
 
         <div class="container-01">
-            <img src="./img/illustration-stay-productive.png" alt="productive">
+            <img src="./assets/img/illustration-stay-productive.png" alt="productive">
         </div>
         <div class="container-01">
             <h1>Stay productive, wherever you are</h1>
@@ -92,14 +93,14 @@
 
     <section class="intro-03">
         <div class="quotes">
-            <img src="./img/bg-quotes.png" alt="bg-quotes">
+            <img src="./assets/img/bg-quotes.png" alt="bg-quotes">
         </div>
         
 
         <div class="container-02">
             <p> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
             <div class="min-container">
-                <img src="./img/profile-1.jpg" alt="img01">
+                <img src="./assets/img/profile-1.jpg" alt="img01">
                 <div class="text">
                     <p><b>Satish Patel</b></p>
                     <blockquote>Founder & CEO, Huddle</blockquote>
@@ -109,7 +110,7 @@
         <div class="container-02">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
             <div class="min-container">
-                <img src="./img/profile-2.jpg" alt="img02">
+                <img src="./assets/img/profile-2.jpg" alt="img02">
                 <div class="text">
                     <p><b>Bruce McKenzie</b></p>
                     <blockquote>Founder & CEO, Huddle</blockquote>
@@ -119,7 +120,7 @@
         <div class="container-02">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
             <div class="min-container">
-                <img src="./img/profile-3.jpg" alt="img03">
+                <img src="./assets/img/profile-3.jpg" alt="img03">
                 <div class="text">
                     <p><b>Iva Boyd</b></p>
                     <blockquote>Founder & CEO, Huddle</blockquote>
@@ -143,10 +144,10 @@
     </section>
 
     <footer>
-        <img src="./img/logo.svg" alt="Logo" class="logo-img">
+        <img src="./assets/img/logo.svg" alt="Logo" class="logo-img">
         <div class="container-06">
             <div class="min-container-01">
-                <img src="./img/icon-location.svg" alt="location">
+                <img src="./assets/img/icon-location.svg" alt="location">
                 <div class="text-01">
                     <p>Lorem ipsum dolor sit amet dolorem consectetur adipisicing elit. Et, minima  voluptatibus ducimus iste culpa.
                     </p>
@@ -154,8 +155,8 @@
             </div>
             <div class="min-container-02">
                 <div class="box-img">
-                    <img src="./img/icon-phone.svg" alt="location">
-                    <img src="./img/icon-email.svg" alt="location">
+                    <img src="./assets/img/icon-phone.svg" alt="location">
+                    <img src="./assets/img/icon-email.svg" alt="location">
                 </div>               
                 <div class="text-02">
                     <p>+1-543-123-4567</p>
@@ -182,9 +183,9 @@
                 </nav>
             </div>
             <div class="icones">
-                <img src="./img/facebook-2429746.svg" alt="facebook">
-                <img src="./img/twitter-2430933.svg" alt="twitter">
-                <img src="./img/instagram-6338401.svg" alt="">
+                <img src="./assets/img/facebook-2429746.svg" alt="facebook">
+                <img src="./assets/img/twitter-2430933.svg" alt="twitter">
+                <img src="./assets/img/instagram-6338401.svg" alt="">
             </div>
         </div>
     </footer>
